css - 194 dark mode and layout fix 2025

--- a/assets/styles/1994.css
+++ b/assets/styles/1994.css
@@ -8,6 +8,19 @@
    height: 100%;
  }
 
+ @media (prefers-color-scheme: dark) {
+   main {
+     background-color: var(--color-wine-2);
+     color: var(--color-orange)
+   }
+   a {
+    color: var(--color-red)
+   }
+   hr {
+    border-color: var(--color-orange);
+   }
+ }
+
  article {
    padding-top: 5%;
  }
