--- a/assets/styles/2025.css
+++ b/assets/styles/2025.css
@@ -241,7 +241,7 @@
    @media (min-width: 750px) {
      main {
        grid-template-columns: repeat(6, 1fr);
-       grid-template-rows: repeat(8, 80px);
+       grid-template-rows: repeat(9, 80px);
        align-content: center;
        gap: 10px;
        padding: 0px;
